--- a/stan/style.css
+++ b/stan/style.css
@@ -13,13 +13,15 @@
 }
 .vfrc-footer {
   background: #1A1A1F;
+}
+.c-kbCYV {
   border-radius: '0px';
 }
 .vfrc-chat-input .vfrc-input {
   background: #1A1A1F;
   color: #FFF;
 }
-.vfrc-chat-input--button {
+.c-cqiQhQ {
   background: #1A1A1F;
 }
 .vfrc-chat-input .vfrc-input::placeholder {
